--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,11 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+// adding bootstrap 
+
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+
 
 h1, h2, h3 {
     font-family: 'Open Sans', sans-serif;
