--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,22 +21,24 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 
-
+//Typography styles
 h1, h2, h3 {
     font-family: 'Open Sans', sans-serif;
 }
 
+
+//navbar formatting
 body, .navbar {
   background: url('https://source.unsplash.com/twukN12EN7c/1920x1080') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-} //background being applied to all pages and navbar 
+} //////background being applied to all pages and navbar 
 
 .navbar, .navbar-collapse{
     border: none; 
-}//remove border from the navbar
+}//////remove border from the navbar
 
 
 
@@ -48,7 +50,7 @@ body, .navbar {
     &:hover{
         color:#686868;
     }
-}// change color of About link on Home Page and change color of DevMatch logo on nav bar
+}////// change color of About link on Home Page and change color of DevMatch logo on nav bar
 
 .navbar-default .navbar-toggle .icon-bar{
     color: black;
@@ -61,4 +63,4 @@ body, .navbar {
         background-color:transparent;
     }
 }
-// change toggle bar color to black when page is condensed (mobile)
+////// change toggle bar color to black when page is condensed (mobile)
